--- a/course.css
+++ b/course.css
@@ -1,25 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-:root{
-    --color1:#E8F7F2;
+
+:root {
+    --color1: #E8F7F2;
     --color2: #E2F8EC;
     --text-color: var(--green-color);
-    --text-color2:var(--green-light-color);
-    --black-color:rgb(17, 17, 17);
+    --text-color2: var(--green-light-color);
+    --black-color: rgb(17, 17, 17);
     --font-size1: 20px;
-    --font-size2:28px;
+    --font-size2: 28px;
     --font-size3: 38px;
-    --font-size4:14px;
-    --font-size4:16px;
-    --white-color1:#F7F1FD;
-    --white-color2:rgba(255, 255, 255, 0.9);
-    --black-color1:#363434e6;
+    --font-size4: 14px;
+    --font-size4: 16px;
+    --white-color1: #F7F1FD;
+    --white-color2: rgba(255, 255, 255, 0.9);
+    --black-color1: #363434e6;
 }
-body{
+
+body {
     overflow-x: hidden;
     font-family: 'poppins';
 }
@@ -29,9 +32,9 @@ Home section
 ------------------------------------------------ */
 .companies-hero-section {
     background-color: var(--black-color);
-  }
-  
-  .container-1280px {
+}
+
+.container-1280px {
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
@@ -43,9 +46,9 @@ Home section
     padding-bottom: 60px;
     display: flex;
     position: relative
-  }
-  
-  .container-1280px.comapanies-hero-section {
+}
+
+.container-1280px.comapanies-hero-section {
     z-index: 3;
     grid-column-gap: 8vh;
     grid-row-gap: 8vh;
@@ -53,18 +56,18 @@ Home section
     justify-content: center;
     align-items: center;
     padding-bottom: 50px;
-  }
-  
-  
-  .container-1280px.comapanies-hero-section.video {
+}
+
+
+.container-1280px.comapanies-hero-section.video {
     grid-column-gap: 2vw;
     grid-row-gap: 2vw;
     flex-flow: column;
     justify-content: space-between;
     align-items: center
-  }
-  
-  .container-1280px.comapanies-hero-section.video.sticky_left_container {
+}
+
+.container-1280px.comapanies-hero-section.video.sticky_left_container {
     grid-column-gap: 2vw;
     grid-row-gap: 2vw;
     justify-content: flex-start;
@@ -76,60 +79,60 @@ Home section
     position: relative;
     top: 2vh;
     bottom: 2vh
-  }
-  
-  .companies-hero-text-contain {
+}
+
+.companies-hero-text-contain {
     text-align: left;
     flex-direction: column;
     align-items: flex-start;
     width: 47%;
     max-width: 546px;
     display: flex
-  }
-  
-  .companies-hero-text-contain {
+}
+
+.companies-hero-text-contain {
     text-align: left;
     flex-direction: column;
     align-items: flex-start;
     width: 47%;
     max-width: 546px;
     display: flex
-  }
-  
-  .companies-hero-heading-span-1 {
+}
+
+.companies-hero-heading-span-1 {
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(#62F435, #05BB12);
     -webkit-background-clip: text;
     background-clip: text;
     font-family: Spacegrotesk, sans-serif;
     font-weight: 700
-  }
-  
-  .companies-hero-heading-span-2 {
+}
+
+.companies-hero-heading-span-2 {
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(to right, var(--green-color), var(--green-light-color));
     -webkit-background-clip: text;
     background-clip: text;
     font-family: Spacegrotesk, sans-serif;
     font-weight: 700
-  }
-  
-  .paragraph-20px.companies-hero-desc {
+}
+
+.paragraph-20px.companies-hero-desc {
     color: #fff;
     width: 100%;
     max-width: 493px;
     margin-bottom: 24px;
-  }
-  
-  .companies-hero-feature {
+}
+
+.companies-hero-feature {
     grid-column-gap: 16px;
     align-items: center;
     display: flex;
     color: #fff;
     margin-top: 3px;
-  }
-  
-  .companies-hero-feature i{
+}
+
+.companies-hero-feature i {
     color: #fff;
     background: var(--green-light-color);
     padding: 2px;
@@ -139,83 +142,88 @@ Home section
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .heading-56px.companies-hero-heading {
+}
+
+.heading-56px.companies-hero-heading {
     color: #fff;
     letter-spacing: -1.12px;
     margin-bottom: 20px;
     font-size: 48px;
     line-height: 60px;
-  }
-  
-  .companies-hero-slider-contain.hide {
+}
+
+.companies-hero-slider-contain.hide {
     display: none;
-  }
-  
-  
-  .companies-hero-slider-contain.video {
+}
+
+
+.companies-hero-slider-contain.video {
     justify-content: center;
     align-items: center;
-  }
-  
-  .hero-lightbox {
+}
+
+.hero-lightbox {
     position: relative;
     flex-flow: column;
     flex: 0 auto;
     justify-content: center;
     align-items: center;
     display: flex;
-  }
-  
-  .w-inline-block {
+}
+
+.w-inline-block {
     /* max-width: 100%; */
     display: inline-block;
-  }
-  
-  .hero-lightbox-play-button {
+}
+
+.hero-lightbox-play-button {
     width: 90px;
     position: absolute;
     top: 50%;
     left: 50%;
-  }
-  
-  .hero-lightbox .image-100 {
+}
+
+.hero-lightbox .image-100 {
     position: relative;
     border: 5px solid var(--green-light-color);
     border-radius: 20px;
-  }
-  
-  
-  @media screen and (max-width:990px) {
+}
+
+
+@media screen and (max-width:990px) {
     .container-1280px.comapanies-hero-section {
-      grid-column-gap: 80px;
-      grid-row-gap: 80px;
-      flex-direction: column;
-      align-items: center;
-      max-width: 800px;
-      margin-bottom: 0;
-      display: flex;
+        grid-column-gap: 80px;
+        grid-row-gap: 50px;
+        flex-direction: column;
+        align-items: center;
+        max-width: 800px;
+        margin-bottom: 0;
+        display: flex;
+        padding: 2.4rem 0 2rem;
     }
-  
+
     .companies-hero-text-contain {
-      width: 80%;
+        width: 100%;
     }
-  }
+}
 
 
 /* container 2 */
 .container2 {
-   padding: 2rem 4rem;
-   display: grid;
-   grid-template-columns: 62% auto;
-   gap: 2rem;
+    padding: 2rem 4rem;
+    display: grid;
+    grid-template-columns: 62% auto;
+    gap: 2rem;
 }
-.container2 .sec1{
+
+.container2 .sec1 {
     width: 100%;
 }
+
 .container2 .tab-header {
     display: flex;
 }
+
 .container2 .tab-header div {
     padding: 10px 20px;
     cursor: pointer;
@@ -226,17 +234,20 @@ Home section
     text-align: center;
     transition: background-color 0.3s ease-in-out;
 }
+
 .container2 .tab-header div:hover {
     /* background: linear-gradient(var(--text-color),var(--text-color2)); */
 }
+
 .container2 .tab-header .active {
     background-color: #fff;
     border: 2px solid var(--text-color2);
     border-top: 3px solid var(--text-color2);
     /* background: linear-gradient(var(--color2),var(--color1),#fff); */
     color: var(--text-color);
-        border-bottom: none;
+    border-bottom: none;
 }
+
 .tab-content {
     border-bottom: 2px solid var(--text-color2);
     border-right: 2px solid var(--text-color2);
@@ -248,13 +259,15 @@ Home section
     border-bottom-right-radius: 10px;
     width: 100%;
 }
-#tab3 .logo{
+
+#tab3 .logo {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 1rem;
     padding: 1rem;
 }
-#tab3 .logo .image-box{
+
+#tab3 .logo .image-box {
     padding: 11px;
     border: 1.34px solid;
     display: flex;
@@ -262,79 +275,92 @@ Home section
     align-items: center;
     border-radius: 2px;
 }
-#tab3 .logo img{
+
+#tab3 .logo img {
     width: 140px;
 }
-.tab-content p{
+
+.tab-content p {
     font-size: 14.40px;
     color: var(--black-color1);
     padding-left: 20px;
     margin-top: 20px;
     line-height: 25px;
 }
-.container2 .sec1 .curriculum{
+
+.container2 .sec1 .curriculum {
     padding: 20px 20px 20px 0;
 }
-.container2 .sec1 h2{
+
+.container2 .sec1 h2 {
     font-size: 16px;
-    background: linear-gradient(to right, var(--text-color),var(--text-color2));
+    background: linear-gradient(to right, var(--text-color), var(--text-color2));
     padding: 10px 30px;
     border-radius: 0 20px 20px 0;
     width: max-content;
-    font-size: 17px; 
+    font-size: 17px;
     color: #fff;
 }
-.container2 .sec1 .curriculum ul{
+
+.container2 .sec1 .curriculum ul {
     padding-left: 40px;
     margin-top: 20px;
 }
-.container2 .sec1 .curriculum ul li{
+
+.container2 .sec1 .curriculum ul li {
     margin-top: 6px;
     font-weight: normal;
     font-size: 15px;
 }
-.container2 .sec1 .curriculum .title{
+
+.container2 .sec1 .curriculum .title {
     font-size: 18px;
     padding-left: 20px;
     font-weight: 500;
     margin-top: 17px;
     color: var(--text-color);
 }
-.container2 .sec1 .curriculum p{
-    font-size: 14.40px; 
+
+.container2 .sec1 .curriculum p {
+    font-size: 14.40px;
     margin-top: 4px;
     padding-left: 36px;
 }
+
 .tab-content.active {
     display: block;
 }
 
-.container2 .sec2{
+.container2 .sec2 {
     background: #fff;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     padding: 14px 16px 20px;
     border-radius: 10px;
     height: max-content;
 }
-.container2 .sec2 .course-info h2{
+
+.container2 .sec2 .course-info h2 {
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(to right, rgb(37, 172, 42), rgb(158, 220, 1));
-    background-clip: text;    font-size: var(--font-size2);
+    background-clip: text;
+    font-size: var(--font-size2);
     font-weight: 700;
     letter-spacing: 1px;
 }
 
-.container2 .sec2 .course-info .info{
+.container2 .sec2 .course-info .info {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 1rem;
 }
-.container2 .sec2 .course-info .info .Information{
+
+.container2 .sec2 .course-info .info .Information {
     display: flex;
     gap: 12px;
 }
-.container2 .sec2 .course-info .info .Information i{
+
+.container2 .sec2 .course-info .info .Information i {
     color: #fff;
     background-color: var(--text-color2);
     border-radius: 50%;
@@ -345,28 +371,33 @@ Home section
     align-items: center;
     font-size: 16px;
 }
-.container2 .sec2 .course-info .info .Information h5{
+
+.container2 .sec2 .course-info .info .Information h5 {
     font-size: 16px;
     font-weight: 500;
 }
-.container2 .sec2 .course-info .info .Information p{
+
+.container2 .sec2 .course-info .info .Information p {
     color: var(--black-color1);
     font-size: 14px;
     font-weight: 500;
     margin-top: -2px;
 }
-.container2 .sec2 .course-info h3{
+
+.container2 .sec2 .course-info h3 {
     margin-top: 1rem;
     font-size: var(--font-size2);
     color: var(--black-color1);
     letter-spacing: .50px;
 }
-.container2 .sec2 .course-info h3 sub{
+
+.container2 .sec2 .course-info h3 sub {
     font-size: 18px;
     font-weight: 600;
     text-decoration: line-through;
 }
-.container2 .sec2 .course-info button{
+
+.container2 .sec2 .course-info button {
     width: 100%;
     margin-top: 1.8rem;
     background-image: linear-gradient(to right, rgb(37, 172, 42), rgb(158, 220, 1));
@@ -380,13 +411,14 @@ Home section
     transition: .3s ease;
 }
 
-.container2 .sec2 .course-info button:hover{
+.container2 .sec2 .course-info button:hover {
     background: #fff;
     color: var(--green-light-color);
     border: 2px solid var(--green-light-color);
 }
+
 /* container 3 start */
-.container3{
+.container3 {
     display: flex;
     justify-content: space-around;
     /* display: grid;
@@ -394,23 +426,27 @@ Home section
     gap: 3rem;
     padding: 2rem 5rem;
 }
-.container3 img{
+
+.container3 img {
     /* height: 400px; */
-    width: 350px; 
+    width: 350px;
 }
-.container3 .content h2{
+
+.container3 .content h2 {
     font-size: 36px;
     letter-spacing: 1.40px;
     font-weight: 600;
     line-height: 44px;
 }
-.container3 .content h2 span{
-    background: linear-gradient(to right,var(--text-color),var(--text-color2));
+
+.container3 .content h2 span {
+    background: linear-gradient(to right, var(--text-color), var(--text-color2));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
-.container3 .content button{
-    background: linear-gradient(to right,var(--text-color),var(--text-color2));
+
+.container3 .content button {
+    background: linear-gradient(to right, var(--text-color), var(--text-color2));
     border: none;
     padding: 10px 30px;
     border-radius: 4px;
@@ -424,7 +460,7 @@ Home section
 }
 
 /* Modal */
-.modal{
+.modal {
     display: none;
     position: fixed;
     top: 0;
@@ -434,163 +470,116 @@ Home section
     overflow-y: auto;
     height: 100vh;
     z-index: 1000;
-    
-}   
-.modal-position{
+
+}
+
+.modal-position {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
 }
-.modal-content{
+
+.modal-content {
     /* background-color: #E8F7F2; */
     margin: 5rem auto auto;
     padding: 28px 24px;
     width: max-content;
     border-radius: 20px;
 }
-/* .modal .modal-content span{
-    float: right;
-    font-size: var(--font-size1);
-    margin-top: -18px;
-    margin-right: -5px;
-    color: var(--text-color2);
-    cursor: pointer;
-}
-.modal .modal-content h3{
-    background: linear-gradient(to right,var(--text-color),var(--text-color2));
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-size: var(--font-size1);
-    font-weight: 600;
-    margin-top: 15px;
-}
 
-.modal .modal-content form{
-    padding: 14px 18px;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    border-radius: 4px;
-}
-.modal .modal-content form input, .modal .modal-content form select{
-    padding: 8px;
-    border: 1px solid black;
-    border-radius: 2px;
-    font-size: 14px;
-}
-.modal .modal-content form input::placeholder, .modal .modal-content form select::placeholder,.container1 .sec2 form option{
-    font-size: 14px;
-    color: var(--black-color1);
-}
-.modal .modal-content form input, .modal .modal-content h2{
-    letter-spacing: 1px;
-    font-size: 14px;
-    color: var(--black-color1);
-}
-.modal .modal-content h2{
-    letter-spacing: 1px;
-    font-size: var(--font-size2);
-}
-.modal .modal-content form .experience label{
-    font-size: 13px;
-
-}
-.modal .modal-content form #experience{
-    font-size: var(--font-size1);
-    color: var(--black-color1);
-    margin: 15px 0;
-}
-.modal .modal-content form button{
-    width: auto;
-    background: var(--text-color);
-    padding: 8px;
-    border-radius: 20px;
-    color: #fff;
-    font-size: 20px;
-    margin: 10px 0;
-    font-weight: 500;
-    border: 2px solid var(--text-color);
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-}
-.modal .modal-content form button:hover{
-    color: var(--text-color);
-    border: 2px solid var(--text-color);
-    background: #fff;
-} */
 @media screen and (max-width:1180px) {
-    .container2,.container3{
+
+    .container2,
+    .container3 {
         padding: 2rem;
     }
-    .container2{
+
+    .container2 {
         grid-template-columns: auto auto;
     }
 }
 
 @media screen and (max-width:1050px) {
-    .container2,.container3{
+
+    .container2,
+    .container3 {
         padding: 2rem;
     }
 }
+
 @media screen and (max-width:900px) {
-    .container2{
+    .container2 {
         grid-template-columns: auto;
     }
-    .container3{
+
+    .container3 {
         flex-direction: column;
     }
-    }
-    @media screen and (max-width:850px) {
-        .container1 img {
-            height: 80vh;
-        }
-        .modal .modal-content form{
-            width: auto;
-        }
-        .container1 .content p {
-            font-size: 15px;
-        }
-        .container1 .content h1 {
-            font-size: 22px;
-        }
-        .container1 img{
-            height: 70vh;
-        }
-        }
+}
 
-    @media screen and (max-width:500px) {
-        .container2 .tab-header div {
-            font-size: 12px;
-            padding: 10px 15px;
-        }
-        .container2{
-            padding: 2rem 1rem;
-        }
-        .container1 img{
-            height: 60vh;
-        }
-        /* #tab3 .logo {
-            display: grid;
-            grid-template-columns: auto auto auto;
-            padding: 1rem 10px;
-        } */
-        #tab3 .logo img{
-            width: 90px;
-        }
+@media screen and (max-width:850px) {
+    .container1 img {
+        height: 80vh;
     }
 
-    @media screen and (max-width:390px) {
-        .container3 img{
-            width: 300px;
-        }
-        
-        .container1 .content {
-            left: 36%;
+    .modal .modal-content form {
+        width: auto;
     }
-    #tab3 .logo img{
+
+    .container1 .content p {
+        font-size: 15px;
+    }
+
+    .container1 .content h1 {
+        font-size: 22px;
+    }
+
+    .container1 img {
+        height: 70vh;
+    }
+
+    .heading-56px.companies-hero-heading {
+        font-size: 35px;
+        line-height: 40px;
+    }
+
+    .container3 .content h2 {
+        font-size: 28px;
+        line-height: 38px;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .container2 .tab-header div {
+        font-size: 12px;
+        padding: 10px 15px;
+    }
+
+    .container2 {
+        padding: 2rem 1rem;
+    }
+
+    .container1 img {
+        height: 60vh;
+    }
+
+    #tab3 .logo img {
+        width: 90px;
+    }
+}
+
+@media screen and (max-width:390px) {
+    .container3 img {
+        width: 100%;
+    }
+
+    .container1 .content {
+        left: 36%;
+    }
+
+    #tab3 .logo img {
         width: 75px;
     }
 }
